<?xml version="1.0" encoding="UTF-8"?>
<!-- ~ Copyright 2021 Red Hat, Inc. and/or its affiliates. ~ ~ Licensed under 
	the Apache License, Version 2.0 (the "License"); ~ you may not use this file 
	except in compliance with the License. ~ You may obtain a copy of the License 
	at ~ ~ http://www.apache.org/licenses/LICENSE-2.0 ~ ~ Unless required by 
	applicable law or agreed to in writing, software ~ distributed under the 
	License is distributed on an "AS IS" BASIS, ~ WITHOUT WARRANTIES OR CONDITIONS 
	OF ANY KIND, either express or implied. ~ See the License for the specific 
	language governing permissions and ~ limitations under the License. -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.kie</groupId>
		<artifactId>kie-parent</artifactId>
		<version>7.59.0.Final</version>
		<!-- Keep in sync with the parent version of kie-soup-bom/pom.xml -->
	</parent>

	<groupId>org.dashbuilder</groupId>
	<artifactId>dashbuilder-parent</artifactId>
	<version>8.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Dashbuilder parent</name>
	<description>
    The parent contains all metadata (including plugins) and also dependency versions for all DashBuilder modules
  </description>
	<inceptionYear>2021</inceptionYear>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.release>11</maven.compiler.release>
		<version.org.webjars.bower.d3js>5.5.0</version.org.webjars.bower.d3js>
		<version.org.webjars.bower.c3>0.6.6</version.org.webjars.bower.c3>
		<version.org.webjars.bower.d3geoprojection>2.5.1</version.org.webjars.bower.d3geoprojection>
		<version.javax.validation>1.0.0.GA</version.javax.validation>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>${version.org.assertj}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<modules>
		<module>dashbuilder-bom</module>
		<module>kie-soup</module>
		<module>dashbuilder-project-storage</module>
		<module>appformer</module>
		<module>dashbuilder-backend</module>
		<module>dashbuilder-shared</module>
		<module>dashbuilder-client</module>
		<module>dashbuilder-packaging</module>
		<module>dashbuilder-webapp</module>
		<module>dashbuilder-runtime-parent</module>
	</modules>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

</project>
